// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header save message component renders correctly when an error saving occurs 1`] = `
<span>
  <Check />
   
  <SaveMessage
    error={true}
    lastSaved="2020-01-01T17:00:00.000Z"
  />
</span>
`;

exports[`Header save message component renders when actively saving 1`] = `
<span>
  <Spinner
    spin={true}
  />
   Saving...
</span>
`;

exports[`Header save message component renders when not currently saving 1`] = `
<span>
  <Check />
   
  <SaveMessage
    error={false}
    lastSaved="2020-01-01T17:00:00.000Z"
  />
</span>
`;

exports[`Header save message component waits a minimum time to visually switch from saving to not saving 1`] = `
<span>
  <Check />
   
  <SaveMessage
    error={false}
    lastSaved="2020-01-01T17:00:00.000Z"
  />
</span>
`;

exports[`Header save message component waits a minimum time to visually switch from saving to not saving 2`] = `
<span>
  <Spinner
    spin={true}
  />
   Saving...
</span>
`;

exports[`Header save message component waits a minimum time to visually switch from saving to not saving 3`] = `
<span>
  <Spinner
    spin={true}
  />
   Saving...
</span>
`;

exports[`Header save message component waits a minimum time to visually switch from saving to not saving 4`] = `
<span>
  <Spinner
    spin={true}
  />
   Saving...
</span>
`;

exports[`Header save message component waits a minimum time to visually switch from saving to not saving 5`] = `
<span>
  <Check />
   
  <SaveMessage
    error={false}
    lastSaved="2020-02-02T14:00:00.000Z"
  />
</span>
`;
